lib/src/compiler/tests/testdata/errors/141.out
error[E002]: wrong type
 --> line:4:5
  |
4 |     test_proto2.nested
  |     ^^^^^^^^^^^^^^^^^^ expression should be `bool`, but it is a struct